--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,39 +1,40 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-        "indent": [
-            "error",
-            2,
-            {
-                "SwitchCase": 1
-            }
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
+   "env": {
+      "node": true,
+      "es2021": true
+   },
+   "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended"
+   ],
+   "parser": "@typescript-eslint/parser",
+   "parserOptions": {
+      "ecmaVersion": 12,
+      "sourceType": "module"
+   },
+   "plugins": [
+      "@typescript-eslint"
+   ],
+   "rules": {
+      "indent": [
+         "error",
+         3
+      ],
+      "linebreak-style": [
+         "error",
+         "unix"
+      ],
+      "quotes": [
+         "error",
+         "single"
+      ],
+      "semi": [
+         "error",
+         "always"
+      ],
+      "eqeqeq": [
+         "error",
+         "smart"
+      ]
+   }
 }
