--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "ever17-nodejs-converter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "csbinary": "^2.1.4"
-  }
+   "name": "ever17-nodejs-converter",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {},
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "csbinary": "^2.1.4",
+      "yargs": "^17.0.1"
+   },
+   "devDependencies": {
+      "@types/node": "^15.3.0",
+      "@types/yargs": "^16.0.1",
+      "@typescript-eslint/eslint-plugin": "^4.23.0",
+      "@typescript-eslint/parser": "^4.23.0",
+      "eslint": "^7.26.0",
+      "typescript": "^4.2.4"
+   }
 }
