--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,10 @@
    "rules": {
       "indent": [
          "error",
-         3
+         3,
+         {
+            "SwitchCase": 1
+         }
       ],
       "linebreak-style": [
          "error",
