--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "@meigyokuthmn/iconv-lite": "npm:@meigyokuthmn/iconv-lite@^0.7.0-pre",
       "csbinary": "^2.1.4",
       "fs-ext": "^2.0.0",
+      "iconv-lite": "^0.6.3",
       "yargs": "^17.0.1"
    },
    "devDependencies": {
