--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "@types/frida-gum": "^16.5.0",
       "csbinary": "^2.1.4",
+      "frida": "^14.2.18",
       "fs-ext": "^2.0.0",
       "iconv-lite": "^0.6.3",
       "yargs": "^17.0.1"
