--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
    "editor.detectIndentation": false,
    "editor.tabSize": 3,
-   "typescript.tsserver.experimental.enableProjectDiagnostics": true
+   "typescript.tsdk": "node_modules\\typescript\\lib",
+   "files.exclude": {
+      "**/node_modules": true
+   }
 }
