--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
-      "@types/frida-gum": "^16.5.0",
       "csbinary": "^2.1.4",
+      "cup-readdir": "^1.0.3",
       "frida": "^14.2.18",
       "fs-ext": "^2.0.0",
       "iconv-lite": "^0.6.3",
+      "typescript-bundle": "^1.0.17",
       "yargs": "^17.0.1"
    },
    "devDependencies": {
@@ -20,6 +21,6 @@
       "@typescript-eslint/eslint-plugin": "^4.23.0",
       "@typescript-eslint/parser": "^4.23.0",
       "eslint": "^7.26.0",
-      "typescript": "^4.2.4"
+      "typescript": "^4.3.2"
    }
 }
